# reinforcement-learning-gameplay-esgi

./: .gitignore  EN-README.md  README.md  main.py  pyproject.toml
agents/: __init__.py  base.py  human_agent.py  random_agent.py  tabular_q.py
configs/: ddqn_er_line_world.yaml  ddqn_er_tictactoe.yaml  ddqn_grid_world.yaml  ddqn_per_grid_world.yaml  ddqn_per_line_world.yaml  ddqn_per_tictactoe.yaml  ddqn_tictactoe.yaml  dqn_bobail.yaml  dqn_grid_world.yaml  random_bobail.yaml  random_grid_world.yaml  random_line_world.yaml  random_tictactoe.yaml  tabular_q_bobail.yaml  tabular_q_grid_world.yaml  tabular_q_tictactoe.yaml
configs_sweep/: ddqn_per_tictactoe.yaml
docs/: FR-IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  PROJECT_INSTRUCTIONS.md  README.md  algorithms.md  benchmark.md  benchmark.txt  decisions.md  encoding.md  observations_experimentations.md  run_gui.md
environments/: __init__.py  base.py  bobail.py  grid_world.py  line_world.py  tictactoe.py
evaluation/: evaluator.py
gui/: app.py
notebooks/: _rebuild_hyperparams_nb.py  _report_utils.py  bobail_analysis.ipynb  compare_models copy.ipynb  compare_models.ipynb  grid_world_analysis.ipynb  hyperparams_methodology copy.ipynb  hyperparams_methodology.ipynb  line_world_analysis.ipynb  rapport_final.ipynb  rapport_final.md  tictactoe_analysis.ipynb
results/: summary.csv
scripts/: benchmark.py  evaluate_all.py  evaluate_planning_agents.py  promote_best.py  run_gui.py  train.py  train_all.py  train_sweep.py
tests/: test_agents.py  test_environments.py  test_training.py  test_value_based.py
(+699 files in other folders)
