[project]
name = "drl-project"
version = "0.1.0"
description = "Deep Reinforcement Learning — 16 algorithms across 4 environments"
requires-python = ">=3.11"
dependencies = [
    "torch==2.2.2",
    "numpy<2",
    "pygame",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
