[project]
name = "drl-project"
version = "0.1.0"
description = "Deep Reinforcement Learning — 16 algorithms across 4 environments"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "pygame",
    "pyyaml",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
